Fixed REI compat